Fix Responsive layout bug
fixed responsive layout to handle more screen sizes and increase overall usability.

--- a/src/components/ClothesSection/ClothesSection.css
+++ b/src/components/ClothesSection/ClothesSection.css
@@ -2,8 +2,7 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
-  margin-left: 116px;
-  justify-content: flex-end;
+  box-sizing: border-box;
 }
 
 .clothes-section__row {
@@ -38,13 +37,14 @@
 }
 
 .clothes-section__items {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, 283px);
-  grid-template-rows: repeat(auto-fit, 283px);
-  grid-gap: 20px;
   margin: 0;
   padding: 0;
   list-style-type: none;
+  display: grid;
+  justify-content: flex-end;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  grid-template-rows: repeat(auto-fit, minmax(280px, 1fr));
+  grid-gap: 20px;
 }
 
 @media screen and (max-width: 768px) {
